Swiper JS added to project section. Small bug: 3rd card cut off on desktops

--- a/styles.css
+++ b/styles.css
@@ -250,16 +250,55 @@ h4 {
   margin-bottom: 6rem;
 }
 
+.swiper {
+  width: 100%;
+  height: auto;
+}
+
+.slider-wrapper {
+  overflow: hidden;
+  max-width: 90%;
+  margin: 0 2rem;
+  /* position: absolute; */
+}
+
+.slider-wrapper .swiper-pagination-bullet {
+  background-color: var(--purple);
+  height: 12px;
+  width: 12px;
+}
+
+.slider-wrapper .swiper-button-prev,
+.slider-wrapper .swiper-button-next {
+  color: var(--purple);
+  transition: 0.2 ease;
+  margin: 12px;
+  z-index: 20;
+}
+
+.slider-wrapper .swiper-button-prev:hover,
+.slider-wrapper .swiper-button-next:hover {
+  color: #af79f5;
+}
+
 .card-list .project-card {
   background-color: var(--background-colour-2);
   border-radius: 8px;
-  width: 400px;
+  width: 100px;
+  height: 450px;
   padding: 35px;
   box-shadow: 0px 0px 6px 1px rgba(73, 18, 144, 0.6);
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  max-width: 400px;
+  min-width: 300px;
+  flex: 1 0 auto;
+}
+
+.card-list {
+  padding: 1.5rem;
 }
 
 .project-info-btn {
@@ -271,6 +310,9 @@ h4 {
   margin-bottom: 2rem;
   padding-bottom: 10px;
   transition: 0.2s ease;
+  position: absolute;
+  top: 0px;
+  right: 5px;
 }
 
 .project-info-btn:hover {
@@ -291,7 +333,7 @@ h4 {
 }
 
 .project-title {
-  margin-bottom: 15px;
+  margin-bottom: 10px;
   font-size: 32px;
   font-weight: bold;
   color: var(--grey);
